<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.74" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.example.dahaka.mycam.ui.camera.util.common.CameraSourcePreview
            android:id="@+id/preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.example.dahaka.mycam.ui.camera.util.common.GraphicOverlay
                android:id="@+id/face_overlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.example.dahaka.mycam.ui.camera.util.common.CameraSourcePreview>

    </FrameLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/control"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">


        <View
            android:id="@+id/rotateContainer"
            android:layout_width="60dp"
            android:layout_height="0dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toTopOf="@+id/view2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/picture"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:contentDescription="@string/picture"
            android:src="@drawable/ic_circle"
            app:layout_constraintBottom_toBottomOf="@+id/picture_empty"
            app:layout_constraintEnd_toEndOf="@+id/picture_empty"
            app:layout_constraintStart_toStartOf="@+id/picture_empty"
            app:layout_constraintTop_toTopOf="@+id/picture_empty" />

        <ImageView
            android:id="@+id/picture_empty"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/picture"
            android:src="@drawable/ic_circle_fill"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imagePreviewCircle"
            android:layout_width="47dp"
            android:layout_height="47dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:visibility="gone"
            android:contentDescription="@string/preview_image"
            android:src="@drawable/ic_circle"
            app:layout_constraintBottom_toBottomOf="@+id/imagePreview"
            app:layout_constraintEnd_toStartOf="@+id/picture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imagePreview" />

        <ImageView
            android:id="@+id/imagePreview"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:visibility="gone"
            android:contentDescription="@string/preview_image"
            android:src="@drawable/ic_circle_accent_fill"
            app:layout_constraintBottom_toBottomOf="@+id/picture"
            app:layout_constraintEnd_toStartOf="@+id/picture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/picture" />

        <ImageView
            android:id="@+id/galleryIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/gallery"
            android:visibility="gone"
            android:src="@drawable/ic_photo_library_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/gallery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/picture"
            app:layout_constraintTop_toTopOf="@+id/gallery" />

        <ImageView
            android:id="@+id/gallery"
            android:layout_width="47dp"
            android:layout_height="47dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:visibility="gone"
            android:contentDescription="@string/preview_image"
            android:src="@drawable/ic_circle"
            app:layout_constraintBottom_toBottomOf="@+id/picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/picture"
            app:layout_constraintTop_toTopOf="@+id/picture" />

    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:contentDescription="@string/picture"
        android:src="@drawable/ic_arrow_back_white_24dp"
        app:layout_constraintBottom_toTopOf="@+id/control"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029999971"
        app:layout_constraintWidth_percent="0.09" />
</android.support.constraint.ConstraintLayout>